--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -485,21 +485,28 @@
             "title": "Steam Login",
             "inputs": {
                 "username": {
-                    "label": "Username",
-                    "placeholder": "Enter your username"
+                    "label": "Sign in with account name",
+                    "placeholder": "Enter your account name"
                 },
                 "password": {
                     "label": "Password",
                     "placeholder": "Enter your password",
-                    "max-length-warning": "The password exceeds 64 characters! If the password is invalid, try to put its first 64 characters."
+                    "max-length-warning": "The password exceeds 64 characters! If the password is invalid, try to enter only its first 64 characters."
                 },
-                "stay": {
-                    "label": "Stay connected"
-                }
+                "qr":{
+                    "label": "Or with a QR code",
+                    "note":{
+                        "use-the":"Use the ",
+                        "steam-mobile-app": "Steam Mobile App",
+                        "to-connect-with-qr": "to sign in with via QR code."
+                    }
+                },
+                "stay": "Remember me"
             },
-            "why-credentials": "Why do you need my credentials?",
+            "why-credentials": "Why are my credentials necessary?",
+            "need-help-to-connect": "I need help to access my account!",
             "buttons": {
-                "submit": "Login"
+                "submit": "Sign in"
             }
         },
         "steam-credentials": {
