--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -484,19 +484,26 @@
             "title": "Connexion Steam",
             "inputs": {
                 "username": {
-                    "label": "Nom d'utilisateur",
-                    "placeholder": "Entre ton nom d'utilisateur"
+                    "label": "Se connecter avec un nom de compte",
+                    "placeholder": "Entre ton nom de compte"
                 },
                 "password": {
                     "label": "Mot de passe",
                     "placeholder": "Entre ton mot de passe",
                     "max-length-warning": "Le mot de passe dépasse 64 caractères ! Si le mot de passe est invalide, tente d'entrer seulement ses 64 premiers caractères."
                 },
-                "stay": {
-                    "label": "Rester connecté"
-                }
+                "qr":{
+                    "label": "Ou avec un QR code",
+                    "note":{
+                        "use-the":"Utilisez l'",
+                        "steam-mobile-app": "application mobile Steam",
+                        "to-connect-with-qr": "pour vous connecter avec un QR code."
+                    }
+                },
+                "stay": "Se souvenir de moi"
             },
             "why-credentials": "Pourquoi mes identifiants sont nécessaires ?",
+            "need-help-to-connect": "J'ai besoin d'aide pour accéder à mon compte !",
             "buttons": {
                 "submit": "Se connecter"
             }
