--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -485,19 +485,26 @@
             "title": "Вход в Steam",
             "inputs": {
                 "username": {
-                    "label": "Имя пользователя",
-                    "placeholder": "Введите имя пользователя"
+                    "label": "Войти с именем пользователя",
+                    "placeholder": "Введите ваше имя пользователя"
                 },
                 "password": {
                     "label": "Пароль",
-                    "placeholder": "Введите пароль",
-                    "max-length-warning": "Пароль больше 64-х символов! Если пароль неверен, введите первые 64 символа."
+                    "placeholder": "Введите ваш пароль",
+                    "max-length-warning": "Пароль превышает 64 символа! Если пароль недействителен, попробуйте ввести только его первые 64 символа."
                 },
-                "stay": {
-                    "label": "Оставаться в аккаунте"
-                }
+                "qr":{
+                    "label": "Или с QR-кодом",
+                    "note":{
+                        "use-the":"Используйте ",
+                        "steam-mobile-app": "мобильное приложение Steam",
+                        "to-connect-with-qr": "для входа с QR-кодом."
+                    }
+                },
+                "stay": "Запомнить меня"
             },
-            "why-credentials": "Почему нужны мои данные для входа?",
+            "why-credentials": "Зачем мне нужны учетные данные?",
+            "need-help-to-connect": "Мне нужна помощь, чтобы войти в свой аккаунт!",
             "buttons": {
                 "submit": "Войти"
             }
