--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -509,6 +509,12 @@
                 "submit": "Войти"
             }
         },
+        "steam-auth-approve":{
+            "title": "Ожидание подтверждения",
+            "protected-by-mobile-auth": "Учетная запись защищена мобильным аутентификатором.",
+            "use-steam-app-to-approve": "Используйте мобильное приложение Steam для подтверждения подключения...",
+            "not-access-to-steam-app": "У меня нет доступа к мобильному приложению Steam"
+        },
         "steam-credentials": {
             "title": "Данные входа Steam",
             "p-1": "Данные входа используются только при скачивании, чтобы проверить наличие у вас Beat Saber, это нужно Steam, чтобы разрешить скачивание. Они не сохраняются и напрямую передаются в DepotDownloader. Если вы не хотите вводить данные для входа, воспользуйтесь руководством(Оно на английском языке) :",
