--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -231,7 +231,6 @@
                     "404": "No se puede contactar con los servidores de Steam",
                     "Password": "La contraseña es inválida.",
                     "InvalidCredentials": "Su correo electrónico o contraseña no son válidos 😴",
-                    "InvalidPassword": "Su contraseña no es válida 😕",
                     "NoManifest": "No se ha encontrado el manifiesto",
                     "DirectoryCreate": "No se pueden instalar las carpetas necesarias.",
                     "NotAvailableApp": "¿Intentas descargar BeatSaber cuando no lo tienes? 🤣",
@@ -247,10 +246,9 @@
                     "SteamLib": "Si tienes este error, reporta el bug en GitHub con los logs por favor.",
                     "ConnectionError": "No se puede conectar a Steam después de 10 intentos 🤯",
                     "LicenceError": "No se puede obtener la lista de licencias.",
-                    "verification-failed": "Verificación fallida, inténtelo más tarde.",
                     "RateLimitExceeded": "Lo has intentado demasiadas veces, espera un poco y vuelve a intentarlo más tarde.",
-                    "AlreadyDownloading": "La descarga ya está en curso",
-                    "no-internet": "Sin conexión a Internet.",
+                    "TokenRejected": "No se puede descargar BeatSaber 😥 inténtalo más tarde 😕",
+                    "AccessDenied": "El acceso a Steam ha sido denegado.",
                     "dotnet-required": "Se debe instalar el tiempo de ejecución de .NET 6 para descargar una versión de BeatSaber. Descárguelo haciendo clic en el botón de abajo."
                 },
                 "actions": {
