--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -215,10 +215,7 @@
             },
             "warnings": {
                 "msg": {
-                    "ManifestChecksum": "Le manifest téléchargé précédemment ne correspond pas au nouveau 🤔",
                     "ConnectionTimeout": "Ta connexion internet semble instable 🥶",
-                    "ConnectionLost": "La connexion a été perdue, nouvelle tentative...",
-                    "ConnectionError": "Impossible de se connecter à Steam, nouvelle tentative...",
                     "Unknown": "Quelque chose d'étrange s'est produit 🤔 Votre connexion est surement instable."
                 }
             },
@@ -231,7 +228,6 @@
                     "404": "Impossible de contacter les serveurs de Steam.",
                     "Password": "Le mot de passe est invalide.",
                     "InvalidCredentials": "Ton e-mail ou mot de passe est invalide 😴",
-                    "InvalidPassword": "Ton mot de passe est invalide 😕",
                     "NoManifest": "Aucun manifest n'a été trouvé.",
                     "DirectoryCreate": "Impossible d'installer les dossiers nécessaires.",
                     "NotAvailableApp": "Tu essayes de télécharger Beat Saber alors que tu ne l'as pas ? 🤣",
@@ -247,10 +243,9 @@
                     "SteamLib": "Si tu as cette erreur, signale le bug sur GitHub avec les logs stp.",
                     "ConnectionError": "Impossible de se connecter à Steam après 10 essais 🤯",
                     "LicenceError": "Impossible d'obtenir la liste des licences.",
-                    "verification-failed": "La vérification a échoué, réessaye plus tard.",
                     "RateLimitExceeded": "Tu as essayé trop de fois attends un peu et recommence plus tard.",
-                    "AlreadyDownloading": "Un téléchargement est déjà en cours",
-                    "no-internet": "Pas de connexion internet.",
+                    "TokenRejected": "Impossible de télécharger Beat Saber 😥 réessaye plus tard 😕",
+                    "AccessDenied": "L'accès à Steam a été refusé.",
                     "dotnet-required": ".NET 6 Runtime doit être installé pour pouvoir télécharger une version de Beat Saber. Télécharge-le en cliquant sur le bouton ci-dessous."
                 },
                 "actions": {
