--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -232,7 +232,6 @@
                     "404": "Нет связи с серверами Steam.",
                     "Password": "Неверный пароль.",
                     "InvalidCredentials": "Ваша почта или пароль неверны 😴",
-                    "InvalidPassword": "Ваш пароль неверен 😕",
                     "NoManifest": "Файл манифеста не найден",
                     "DirectoryCreate": "Не смогли создать нужные папки.",
                     "NotAvailableApp": "Вы пытаетесь скачать Beat Saber, не купив её? 🤣",
@@ -248,10 +247,9 @@
                     "SteamLib": "Если вы это видите, пожалуйста, сообщите о баге на GitHub с файлом логов.",
                     "ConnectionError": "Не удалось подключиться к Steam за 10 попыток 🤯",
                     "LicenceError": "Не удалось проверить наличие лицензии.",
-                    "verification-failed": "Верификация провалена, повторите попытку позже.",
                     "RateLimitExceeded": "Слишком много попыток, вернитесь позже и попробуйте снова.",
-                    "AlreadyDownloading": "Скачивание уже в процессе",
-                    "no-internet": "Нет интернета.",
+                    "TokenRejected": "Не удалось скачать Beat Saber 😥 повторите попытку позже 😕",
+                    "AccessDenied": "Доступ к Steam был отклонен.",
                     "dotnet-required": "Среда запуска .NET 6 должна быть установлена, чтобы скачать Beat Saber. Скачайте её с помощью кнопки ниже."
                 },
                 "actions": {
