--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -231,7 +231,7 @@
                     "401": "Похоже Steam не хочет, чтобы мы скачали Beat Saber 😢",
                     "404": "Нет связи с серверами Steam.",
                     "Password": "Неверный пароль.",
-                    "InvalidCredentials": "Ваша почта или пароль неверны 😴",
+                    "InvalidCredentials": "Неверные учетные данные для входа, неразрешенное соединение или слишком много попыток входа.",
                     "NoManifest": "Файл манифеста не найден",
                     "DirectoryCreate": "Не смогли создать нужные папки.",
                     "NotAvailableApp": "Вы пытаетесь скачать Beat Saber, не купив её? 🤣",
