--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -231,7 +231,7 @@
                     "401": "Steam doesn't seem to want to let us download Beat Saber 😢",
                     "404": "Unable to contact Steam servers.",
                     "Password": "Password is invalid.",
-                    "InvalidCredentials": "Your e-mail or password is invalid 😴",
+                    "InvalidCredentials": "Invalid login credentials, unapproved connection, or too many login attempts.",
                     "NoManifest": "No manifest was found",
                     "DirectoryCreate": "Unable to install the necessary folders.",
                     "NotAvailableApp": "Are you trying to download Beat Saber when you don't have it? 🤣",
