--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -248,7 +248,7 @@
                     "ConnectionError": "Не удалось подключиться к Steam за 10 попыток 🤯",
                     "LicenceError": "Не удалось проверить наличие лицензии.",
                     "RateLimitExceeded": "Слишком много попыток, вернитесь позже и попробуйте снова.",
-                    "TokenRejected": "Не удалось скачать Beat Saber 😥 повторите попытку позже 😕",
+                    "TokenRejected": "Ваш токен для входа был отклонен 😕 Пожалуйста, попробуйте снова.",
                     "AccessDenied": "Доступ к Steam был отклонен.",
                     "dotnet-required": "Среда запуска .NET 6 должна быть установлена, чтобы скачать Beat Saber. Скачайте её с помощью кнопки ниже."
                 },
