[hotfix] useless word in EN translation

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -496,7 +496,7 @@
                     "note":{
                         "use-the":"Use the ",
                         "steam-mobile-app": "Steam Mobile App",
-                        "to-connect-with-qr": "to sign in with via QR code."
+                        "to-connect-with-qr": "to sign in via QR code."
                     }
                 },
                 "stay": "Remember me"
